--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-    <title>Adoção de Cachorros - Dog</title>
+    <title>DOGS</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
                 <i class="fas fa-paw"></i>
-                <span>Dog</span>
+                <span>DOGS</span>
             </div>
             <ul>
                 <li><a href="#"><i class="fas fa-home"></i></a></li>
